horizen listview add ok

--- a/res/layout/manual_main.xml
+++ b/res/layout/manual_main.xml
@@ -48,6 +48,14 @@
 
     </FrameLayout>
 
+    <com.imotor.manual.HorizontalListView
+        android:id="@+id/horizontalListView"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/bg"
+        >
 
+    </com.imotor.manual.HorizontalListView>
 
 </RelativeLayout>
