--- a/res/layout/custom_data_view.xml
+++ b/res/layout/custom_data_view.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginRight="2dp"
-        android:layout_marginLeft="2dp"/>
+        android:layout_marginLeft="2dp"
+        android:layout_marginBottom="2dp"/>
 
 </LinearLayout>
