--- a/res/layout/custom_data_view.xml
+++ b/res/layout/custom_data_view.xml
@@ -1,17 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_vertical"
     >
-
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginRight="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginBottom="2dp"/>
 
