--- a/res/layout/custom_data_view.xml
+++ b/res/layout/custom_data_view.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="2dp"
-        android:layout_marginBottom="2dp"/>
+        android:paddingBottom="2dp"
+        android:paddingTop="2dp"
+        />
 
 </LinearLayout>
