--- a/res/layout/manual_main.xml
+++ b/res/layout/manual_main.xml
@@ -51,9 +51,11 @@
     <com.imotor.manual.HorizontalListView
         android:id="@+id/horizontalListView"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bg"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
         >
 
     </com.imotor.manual.HorizontalListView>
