--- a/res/layout/custom_list_view.xml
+++ b/res/layout/custom_list_view.xml
@@ -10,9 +10,11 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="2dp"
-        android:paddingBottom="2dp"
-        android:paddingTop="2dp"
+
+        android:paddingBottom="@dimen/custom_list_view_imageview_padding_top_bottom"
+        android:paddingTop="@dimen/custom_list_view_imageview_padding_top_bottom"
+        android:paddingLeft="@dimen/custom_list_view_imageview_padding_top_bottom"
+        android:paddingRight="@dimen/custom_list_view_imageview_padding_top_bottom"
         />
 
 </LinearLayout>
