--- a/res/layout/manual_main.xml
+++ b/res/layout/manual_main.xml
@@ -10,8 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -51,12 +49,10 @@
     <com.imotor.manual.HorizontalListView
         android:id="@+id/horizontalListView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/main_layout_horizonta_listView_height"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bg"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
-        >
+           >
 
     </com.imotor.manual.HorizontalListView>
 
