--- a/res/layout/manual_main.xml
+++ b/res/layout/manual_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/listview_bg_nor"
     >
 
     <FrameLayout
@@ -51,8 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/main_layout_horizonta_listView_height"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/bg"
-           >
+        android:background="@color/colorPrimaryDark"
+        >
 
     </com.imotor.manual.HorizontalListView>
 
