change on touch , move from right to left ok

--- a/res/layout/manual_main.xml
+++ b/res/layout/manual_main.xml
@@ -90,6 +90,7 @@
         android:layout_height="@dimen/main_layout_horizonta_listView_height"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimaryDark"
+        android:visibility="invisible"
         >
     </Gallery>
 
