--- a/app/src/main/res/layout/manual_main.xml
+++ b/app/src/main/res/layout/manual_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/listview_bg_nor"
     >
 
     <FrameLayout
@@ -10,25 +10,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewpager_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            >
 
-            <ImageView
-                android:id="@+id/image_surface_view"
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:background="@drawable/bg"
-                />
+                android:visibility="gone">
+            </android.support.v4.view.ViewPager>
+
+            <LinearLayout
+                android:id="@+id/ll_image_group"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/image_surface_view_l"
+                    android:layout_width="1024dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/listview_bg_select"
+                    android:visibility="gone"
+                    />
+                <ImageView
+                    android:id="@+id/image_surface_view"
+                    android:layout_width="1024dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/listview_bg_nor"
+                    />
+                <ImageView
+                    android:id="@+id/image_surface_view_r"
+                    android:layout_width="1024dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/listview_bg_nor"
+                    />
+            </LinearLayout>
+
 
             <FrameLayout
                 android:id="@+id/media_controller_bar"
@@ -36,7 +55,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 >
-
             </FrameLayout>
 
             <TextView
@@ -48,14 +66,32 @@
                 android:layout_marginBottom="15dp"
                 android:layout_marginRight="15dp"
                 android:ellipsize="end"
+                android:visibility="gone"
                 />
 
         </RelativeLayout>
 
-
-
     </FrameLayout>
 
+    <com.imotor.manual.HorizontalListView
+        android:id="@+id/horizontalListView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/main_layout_horizonta_listView_height"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
+        android:visibility="gone"
+        >
 
+    </com.imotor.manual.HorizontalListView>
+
+    <Gallery
+        android:id="@+id/gallery"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/main_layout_horizonta_listView_height"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
+        android:visibility="invisible"
+        >
+    </Gallery>
 
 </RelativeLayout>
