--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="112dp"
+        android:layout_height="60dp"
 
         android:paddingBottom="@dimen/custom_list_view_imageview_padding_top_bottom"
         android:paddingTop="@dimen/custom_list_view_imageview_padding_top_bottom"
